--- a/INSTALL
+++ b/INSTALL
@@ -1,82 +1,97 @@
 NAME
-    SquidGuard Manager - Web GUI for squidGuard and SquidClamav
+    SquidGuard Manager - Web GUI for SquidGuard and SquidClamav
     administration
+
+DESCRIPTION
+    SquidGuard Manager is a Perl CGI Web GUI for squidGuard and SquidClamav
+    administration. It allows full management of SquidGuard blocklist and
+    ACLs. You can also manage graphicaly your SquidClamav configuration.
+
+    This program supports all configuration directives of SquidGuard and
+    SquidClamav without intrusive modification, i-e you can still edit the
+    configuration files by hand before and after using SquidGuard Manager.
 
 REQUIREMENT
     SquidGuard Manager may run on any Unix like OS with any modern Perl
     installation using the perl CGI module. It must be run on a proxy server
     hosting squidGuard.
 
-    You need to run this CGI script using Apache HTTP server and the httpd
-    daemon must run be run as uid and gid holding SquidGuard (most of the
-    time this is squid cache effective user/group). This is to allow
-    SquidGuard Manager to read and write into the configuration files to
-    manage blocklists and acls. If you use SquidClamav, it must also be run
-    under the same user.
+    You need to run this CGI script using Apache HTTP server. And the httpd
+    daemon must be run as uid and gid holding SquidGuard (most of the time
+    this is squid cache effective user/group). This is to allow SquidGuard
+    Manager to read and write into the configuration files to manage
+    blocklists and acls. If you use SquidClamav, it must be run under the
+    same user too.
 
-    SquidGuard Manager use some system commands to manage blocklists and log
-    files. Your system must have the following binariesi installed: diff,
+    SquidGuard Manager uses some system commands to manage blocklists and
+    log files. Your system must have the following binaries installed: diff,
     grep, find, rm and tail.
 
 INSTALLATION
-    To install SquidGuard Manager you must be root as you need to set
-    specials grants on the filesystem.
+    To install SquidGuard Manager you must be able to gain root privilege so
+    that installer script can put files with appropriate permission.
 
   Prepare your system
     SquidGuard Manager need to have read/write access onto SquidGuard
-    configuration file and the dbhome directory. It also must have read
-    access onto the log file. If you use the SquidClamav Manager GUI it also
+    configuration file and the dbhome directory. It must also have read
+    rights onto the log file. If you use the SquidClamav Manager GUI it also
     need read/write access on the squidclamav.conf file as well as the log
     file.
 
-    For that SquidGuard Manager must be run as the user under which
-    squidguard and squidclamav are run. Most of the time this is the Squid
+    For that reason SquidGuard Manager must be run as the user under which
+    SquidGuard and SquidClamav are run. Most of the time this is the Squid
     cache effective user.
 
             chown -R squid:squid /usr/local/squidGuard
     or
             chown -R squid:squid /etc/squidguard.conf /var/lib/squidguard
 
-    To allow httpd to run squidguardmgr.cgi as a different user or group you
-    must edit your httpd.conf file and change the User/Group directive to
+    To allow httpd to run squidguardmgr.cgi as appropriate user/group you
+    must edit your httpd.conf file and set the User and Group directives to
     the user and group running Squid.
 
-    To be able to reconfigure squid after configuration change from the web
-    GUI SquidGuard Manager use a setuid wrapper as root user. So you system
-    may support this feature or will need to do that by hand.
+    After configuration changes squid ought to be 'reconfigure'd, in other
+    words quick-restarted. SquidGuard Manager Web GUI does it by using a
+    'setuid root'ed wrapper. If your system doesn't support the feature
+    unfortunately, you may need to do that by hand.
 
-    IMPORTANT: SquidGuard Manager do not support symbolic link into the
-    SquidGuard dbhome directory. You need to remove these symbolic links
-    from your system and modify your squidguard.conf file to replace them by
-    the directories real names.
+    IMPORTANT: SquidGuard Manager doesn't support symbolic links in the
+    SquidGuard dbhome directory. If it is your case, you need to remove
+    those symbolic links and modify your squidguard.conf file so that points
+    the real files and directories.
 
   Automatic installation
-    Execute the install script and answer to the questions as follow:
+    Execute the install script and answer to some questions it ask:
 
-            perl Makefile.PL
-            make && make install
+            $ perl Makefile.PL
+            $ make
+            $ su
+            # make install
 
     By default it will install all files into /var/www/squidguardmgr/ and
-    give you a configuration sample to include in your httpd.conf. After
-    that restart your httpd server and take a look at
-    http://my.proxy.dom/squidguardmgr/
+    show you a configuration sample that should be included in your
+    httpd.conf. Also, you can find some Apache configuration samples in
+    contrib/ directory of the SquidGuard Manager source repository. Once you
+    have done, restart httpd server and take a look at
+    http://my.proxy.dom/squidguardmgr/ or
+    http://my.proxy.dom:port/squidguardmgr/
 
-    You can fully customize this installation by using the following
-    variables:
+    You can fully customize this installation by passing the following
+    variables to Makefile.PL:
 
-            CONFFILE => Where is the SquidGuard configuration file
-            DBHOME => Where is the SquidGuard DB directory
-            LOGDIR => Where is the SquidGuard log directory
-            WWWDIR => SquidGuard Manager base directory installation
-            CGIDIR => Where to install CGI: WWWDIR/CGIDIR. Default: WWWDIR
-            HTMLDIR =>  Where to install css,js and images files: WWWDIR/HTMLDIR. Default: WWWDIR
-            LANGDIR => Translation directory to use (en_US or fr_FR). Default: en_US
-            BASEURL => Base url where css,js and images files will be found. Default: /squidguardmgr
+            CONFFILE => Absolute path to the SquidGuard configuration file
+            DBHOME => Absolute path to the SquidGuard DB directory
+            LOGDIR => Absolute path to the SquidGuard log directory
+            WWWDIR => Absolute path to the SquidGuard Manager base installation directory
+            CGIDIR => Relative path from WWWDIR to install CGI script. Default equals WWWDIR
+            HTMLDIR =>  Relative path from WWWDIR to install css, js and image files. Default equals WWWDIR
+            LANGDIR => Translation language to use (en_US or fr_FR). Default: en_USœ
+            BASEURL => Path part of the base url to access SquidGuard Manager Web GUI. Default: /squidguardmgr
             SQUIDUSR => User running Squid
             SQUIDGRP => Group running Squid
-            SQUIDCLAMAV => Path to squidclamav binary (v5.x only)
+            SQUIDCLAMAV => Absolute path to the squidclamav binary (v5.x only)
             CICAP_SOCKET => c-icap server control socket (v6.x only)
-            SQUIDCLAMAVCONF => Path to squidclamav.conf file
+            SQUIDCLAMAVCONF => Absolute path to squidclamav.conf file
 
     For packaging there's two more configuration variables:
 
@@ -85,11 +100,12 @@ INSTALLATION
 
     Example:
 
-            perl Makefile.PL CONFFILE=/usr/local/etc/squidguard.conf \
-            DBHOME=/usr/local/squidguard/database \
+            perl Makefile.PL \
+            CONFFILE=/usr/local/etc/squidguard.conf \
+            DBHOME=/usr/local/squidguard/db \
             LOGDIR=/usr/local/logs/squidguard \
             WWWDIR=/usr/local/apache CGIDIR=cgi-bin/admin HTMLDIR=htdocs/admin \
-            LANGDIR=fr_FR BASEURL=/admin/ SQUIDUSR=squid SQUIDGRP=squid \
+            LANGDIR=fr_FR BASEURL=/admin SQUIDUSR=squid SQUIDGRP=squid \
             SQUIDCLAMAV=/usr/local/bin/squidclamav \
             SQUIDCLAMAVCONF=/etc/squidclamav.conf
 
@@ -102,10 +118,9 @@ INSTALLATION
     /usr/local/apache/htdocs/admin/. Squidguard Manager will expect to find
     the SquidGuard configuration file at /usr/local/etc/squidguard.conf and
     the log and SquidGuard databases respectively at
-    /usr/local/logs/squidguard and /usr/local/squidguard/database. All
-    installed files will be owned by the squid user and squid group. The
-    squid wrapper (use to reconfigure squid after change) will be setuid as
-    root user.
+    /usr/local/logs/squidguard and /usr/local/squidguard/db. All the
+    installed files will be owned by user squid and group squid. The squid
+    wrapper (use to reconfigure squid after change) will be setuid root.
 
   Manual installation
     Copy all files from the cgi-bin repository into the CGI script directory
@@ -117,28 +132,32 @@ INSTALLATION
     directory or any other subdirectory and check that they can be read by
     your httpd server.
 
-    Edit the squidguardmgr.conf file into you cgi directory and check that
-    all path are conform to your installation.
+    Edit the squidguardmgr.conf file into your cgi directory and check that
+    all paths conforms to your installation.
 
     If you want to be able to reload Squid redirector from the GUI interface
     after your SquidGuard and/or SquidClamav modification, you must compile
     and install the squid_wrapper with suid root into the squidguardmgr.cgi
-    repository:
+    directory.
+
+    Before compilation you may need to edit squid_wrapper.c and change the
+    SQUID_BINARY definition to point correctly to your squid binary.
+
+    Then as root:
 
             cd squid_wrapper/
             cc -o /path/squidguardmgr/cgi/squid_wrapper squid_wrapper.c
             chown root.root /path/squidguardmgr/cgi/squid_wrapper
-            chmod +s /path/squidguardmgr/cgi/squid_wrapper
-
-    Before that you must edit squid_wrapper.c and change the path to squid
-    binary.
+            chmod u+s /path/squidguardmgr/cgi/squid_wrapper
 
 CONFIGURATION
 
-    See README file or go to http://squidguardmgr.darold.net/
+See README file.
 
-AUTHOR
+AUTHORS
     Gilles Darold <gilles @nospam@ darold.net>
+
+    Tatsuya Nonogaki <winfield @nospam@support.email.ne.jp>
 
 COPYRIGHT
     Copyright (c) 2010-2013 Gilles Darold - All rights reserved.
@@ -157,6 +176,6 @@ COPYRIGHT
             along with this program.  If not, see < http://www.gnu.org/licenses/ >.
 
 BUGS
-    Your volontee to help construct a better software by submitting bug
+    Your volonteer to help construct a better software by submitting bug
     report or feature request as well as code contribution are welcome.
 
