--- a/README
+++ b/README
@@ -17,26 +17,27 @@ FEATURES
         This interface allows you to define SquidGuard global variables.
 
     Schedules
-        This interface allows you to define scheduled time in order to use
-        in other SquidGuard objects (Sources, URL Rewrites, Filters and ACLs).
+        This interface allows you to define schedules time in order to use
+        in other SquidGuard objects (Sources, URL Rewrites, Filters and
+        ACLs).
 
     Sources
-        Use this interface  to  define  sources  like  users, groups, Ip
+        Use this interface to define sources like users, groups, Ip
         addresses, range of Ip addresses or networks to apply policies on
         them. These can be issued from a list, a file, an ldap query, a
         mysql query or a command line utility.
 
     Url rewriting
         This interface allows you to define as many URL rewriting rules as
-        you want . They will be applied by SquidGuard following regexp
-        pattern matching.
+        you want. They will be applied by SquidGuard following regex pattern
+        matching.
 
     Filters
-        This interface allows you to define URL destination groups based
-        on predefined lists of domain, url or regexp expressions.
+        This interface allows you to defined URL destination groups based on
+        predefined lists of domain, url or regexp expressions.
 
     ACLs
-        This is the central place  where  you define what source objects
+        This is the central place where you define what source objects
         follow what filters and when. Here everything fits together.
 
     View Configuration
@@ -47,7 +48,7 @@ FEATURES
         or adding, removing and searching entries.
 
     Logs
-        This interface allows you to consult defferent log files you have
+        This interface allow you to consult different log files you have
         defined in the SquidGuard object configuration.
 
     SquidClamav
@@ -68,13 +69,13 @@ FEATURES
         This interface allows you to manage SquidClamav global variables.
 
     Virus Scanning
-        This interface allows you  to exclude URL or Content-Type from  scan
-        by defining regexp patterns.
+        This interface allows you to exclude URL or Content-Type from virus
+        scan by defining regexp patterns.
 
     Whitelists
-        Use this interface  to define which domain name or site hostname  to
-        be whitelisted, i-e there happens no virus scan nor call to SquidGuard
-        on these sites.
+        Use this interface to define which domain name or site hostname to
+        be whitelisted, i-e there happens no virus scan nor call to
+        SquidGuard on these sites.
 
     Trusted Users
         Use this interface to define which users (RFC-931 usernames) will be
@@ -90,21 +91,21 @@ FEATURES
     View log
         This interface allows you to consult the SquidClamav log file.
 
-    In resume SquidGuard Manager is capable of every configuration task on
-    SquidGuard and SquidClamav which otherwise you have to perform by opening
-    terminal, editing files, becoming root and running commands manually. 
-    Modifications are written immediately to the configuration files.
+    In resume you can do all you're doing by hand in dedicated HTML
+    interfaces, modifications are written immediately to configuration
+    files.
 
 REQUIREMENT
-    SquidGuard Manager may run on any  Unix like OS  with any modern Perl
+    SquidGuard Manager may run on any Unix like OS with any modern Perl
     installation using the perl CGI module. It must be run on a proxy server
     hosting squidGuard.
 
     You need to run this CGI script using Apache HTTP server. And the httpd
     daemon must be run as uid and gid holding SquidGuard (most of the time
-    this is Squid cache effective user/group). This is to allow SquidGuard
-    Manager to read and write the configuration files to manage blacklists
-    and acls. If you use SquidClamav, it must be run under the same user too.
+    this is squid cache effective user/group). This is to allow SquidGuard
+    Manager to read and write into the configuration files to manage
+    blocklists and acls. If you use SquidClamav, it must be run under the
+    same user too.
 
     SquidGuard Manager uses some system commands to manage blocklists and
     log files. Your system must have the following binaries installed: diff,
@@ -115,8 +116,8 @@ INSTALLATION
     that installer script can put files with appropriate permission.
 
   Prepare your system
-    SquidGuard Manager needs to  have  read/write access  onto SquidGuard
-    configuration file  and the dbhome directory.  It must also have read
+    SquidGuard Manager need to have read/write access onto SquidGuard
+    configuration file and the dbhome directory. It must also have read
     rights onto the log file. If you use the SquidClamav Manager GUI it also
     need read/write access on the squidclamav.conf file as well as the log
     file.
@@ -130,8 +131,8 @@ INSTALLATION
             chown -R squid:squid /etc/squidguard.conf /var/lib/squidguard
 
     To allow httpd to run squidguardmgr.cgi as appropriate user/group you
-    must edit your httpd.conf file and set the User and Group directive
-    to the user and group running Squid.
+    must edit your httpd.conf file and set the User and Group directives to
+    the user and group running Squid.
 
     After configuration changes squid ought to be 'reconfigure'd, in other
     words quick-restarted. SquidGuard Manager Web GUI does it by using a
@@ -139,12 +140,12 @@ INSTALLATION
     unfortunately, you may need to do that by hand.
 
     IMPORTANT: SquidGuard Manager doesn't support symbolic links in the
-    SquidGuard dbhome directory. If it is your case, you need to remove those
-    symbolic links and modify your squidguard.conf so that points the real
-    files and directories.
+    SquidGuard dbhome directory. If it is your case, you need to remove
+    those symbolic links and modify your squidguard.conf file so that points
+    the real files and directories.
 
   Automatic installation
-    Execute the install script and answer to some questions it asks:
+    Execute the install script and answer to some questions it ask:
 
             $ perl Makefile.PL
             $ make
@@ -154,10 +155,9 @@ INSTALLATION
     By default it will install all files into /var/www/squidguardmgr/ and
     show you a configuration sample that should be included in your
     httpd.conf. Also, you can find some Apache configuration samples in
-    contrib/ directory of the SquidGuard Manager source repository.
-    Once you have done, restart httpd server and take a look at
-    http://my.proxy.dom/squidguardmgr/
-    or
+    contrib/ directory of the SquidGuard Manager source repository. Once you
+    have done, restart httpd server and take a look at
+    http://my.proxy.dom/squidguardmgr/ or
     http://my.proxy.dom:port/squidguardmgr/
 
     You can fully customize this installation by passing the following
@@ -166,16 +166,11 @@ INSTALLATION
             CONFFILE => Absolute path to the SquidGuard configuration file
             DBHOME => Absolute path to the SquidGuard DB directory
             LOGDIR => Absolute path to the SquidGuard log directory
-            WWWDIR => Absolute path to the SquidGuard Manager base
-                      installation directory
-            CGIDIR => Relative path from WWWDIR to install CGI script.
-                      Default equals WWWDIR
-            HTMLDIR => Relative path from WWWDIR to install css, js and
-                      image files. Default equals WWWDIR
-            LANGDIR => Translation language to use (en_US or fr_FR).
-                      Default: en_US
-            BASEURL => Path part of the base url to access SquidGuard
-                      Manager Web GUI. Default: /squidguardmgr
+            WWWDIR => Absolute path to the SquidGuard Manager base installation directory
+            CGIDIR => Relative path from WWWDIR to install CGI script. Default equals WWWDIR
+            HTMLDIR =>  Relative path from WWWDIR to install css, js and image files. Default equals WWWDIR
+            LANGDIR => Translation language to use (en_US or fr_FR). Default: en_USœ
+            BASEURL => Path part of the base url to access SquidGuard Manager Web GUI. Default: /squidguardmgr
             SQUIDUSR => User running Squid
             SQUIDGRP => Group running Squid
             SQUIDCLAMAV => Absolute path to the squidclamav binary (v5.x only)
@@ -189,18 +184,16 @@ INSTALLATION
 
     Example:
 
-            $ perl Makefile.PL \
-              CONFFILE=/usr/local/etc/squidguard.conf \
-              DBHOME=/usr/local/squidguard/db \
-              LOGDIR=/usr/local/logs/squidguard \
-              WWWDIR=/usr/local/apache CGIDIR=cgi-bin/admin HTMLDIR=htdocs/admin \
-              LANGDIR=fr_FR BASEURL=/admin SQUIDUSR=squid SQUIDGRP=squid \
-              SQUIDCLAMAV=/usr/local/bin/squidclamav \
-              SQUIDCLAMAVCONF=/etc/squidclamav.conf
+            perl Makefile.PL \
+            CONFFILE=/usr/local/etc/squidguard.conf \
+            DBHOME=/usr/local/squidguard/db \
+            LOGDIR=/usr/local/logs/squidguard \
+            WWWDIR=/usr/local/apache CGIDIR=cgi-bin/admin HTMLDIR=htdocs/admin \
+            LANGDIR=fr_FR BASEURL=/admin SQUIDUSR=squid SQUIDGRP=squid \
+            SQUIDCLAMAV=/usr/local/bin/squidclamav \
+            SQUIDCLAMAVCONF=/etc/squidclamav.conf
 
-            $ make
-            $ su
-            # make install
+            make && make install
 
     This will install SquidGuard Manager CGI squidguardmgr.cgi,
     squidguardmgr.conf, squid_wrapper and all language files under
@@ -209,9 +202,9 @@ INSTALLATION
     /usr/local/apache/htdocs/admin/. Squidguard Manager will expect to find
     the SquidGuard configuration file at /usr/local/etc/squidguard.conf and
     the log and SquidGuard databases respectively at
-    /usr/local/logs/squidguard/ and /usr/local/squidguard/db/. All the
+    /usr/local/logs/squidguard and /usr/local/squidguard/db. All the
     installed files will be owned by user squid and group squid. The squid
-    wrapper (used to reconfigure squid after change) will be setuid root.
+    wrapper (use to reconfigure squid after change) will be setuid root.
 
   Manual installation
     Copy all files from the cgi-bin repository into the CGI script directory
@@ -223,7 +216,7 @@ INSTALLATION
     directory or any other subdirectory and check that they can be read by
     your httpd server.
 
-    Edit the squidguardmgr.conf file in you cgi directory and check that
+    Edit the squidguardmgr.conf file into your cgi directory and check that
     all paths conforms to your installation.
 
     If you want to be able to reload Squid redirector from the GUI interface
@@ -238,8 +231,8 @@ INSTALLATION
 
             cd squid_wrapper/
             cc -o /path/squidguardmgr/cgi/squid_wrapper squid_wrapper.c
-            chown root:root /path/squidguardmgr/cgi/squid_wrapper
-            chmod 4755 /path/squidguardmgr/cgi/squid_wrapper
+            chown root.root /path/squidguardmgr/cgi/squid_wrapper
+            chmod u+s /path/squidguardmgr/cgi/squid_wrapper
 
 CONFIGURATION
     SquidGuard Manager needs some configuration. They are stored in the
@@ -268,15 +261,15 @@ CONFIGURATION
         Path to the SquidClamav configuration file.
 
     LANG en_US
-        Used to set the language, default is en_US. Current available
-        LANGS are:
-        en_US, fr_FR.
+        Used to set the language, default is en_US. Current available LANGS
+        are: en_US, fr_FR.
 
     SQUID_WRAPPER /var/www/squidguargmgr/squid_wrapper
-        Command wrapper to reload Squid.  Why you need this wrapper  is
+        Command wrapper to reload Squid. Why you need this wrapper is
         because only root can do it. This wrapper will execute the following
         system command as root user:
-        /path/to/squid/bin/squid -k reconfigure
+
+                /path/to/squid/bin/squid -k reconfigure
 
     IMG_DIR /squidguargmgr/images
         Path part of SquidGuard Manager URL where images are found.
@@ -300,13 +293,15 @@ CONFIGURATION
         /usr/bin/diff, /usr/bin/rm and /usr/bin/grep.
 
     KEEP_DIFF
-        This enables record of added/removed items from squidGuard blacklists
-        in diff files which can be used to recover changes after a fresh
-        download of blacklists. Default value is 1, enabled. Set it to 0
-        to disable this feature .
+        This enables record of added/removed items from squidGuard
+        blacklists in diff files which can be used to recover changes after
+        a fresh download of blacklists. Default value is 1, enabled. Set it
+        to 0 to disable this feature.
 
-AUTHOR
+AUTHORS
     Gilles Darold <gilles @nospam@ darold.net>
+
+    Tatsuya Nonogaki <winfield @nospam@support.email.ne.jp>
 
 COPYRIGHT
     Copyright (c) 2010-2013 Gilles Darold - All rights reserved.
@@ -325,6 +320,6 @@ COPYRIGHT
             along with this program.  If not, see < http://www.gnu.org/licenses/ >.
 
 BUGS
-    Your volunteer to help construct a better software by submitting bug
+    Your volonteer to help construct a better software by submitting bug
     report or feature request as well as code contribution are welcome.
 
